Wed Jun 26 22:41:22 BST 2013  Peter Schiffer <pschiffe@redhat.com>

	* lib/encodings.c (find_charset_locale): Fall back to C.UTF-8 then
	  en_US.UTF-8 if /usr/share/i18n/SUPPORTED does not exist, the
	  requested character set is UTF-8, and the current LC_CTYPE locale
	  is not UTF-8 (Fedora bug #657409).
	* src/tests/man-6: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add man-6.
	* NEWS: Document this.

Wed Jun 26 22:33:00 BST 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Move check for whether nroff supports warning
	  control down below check for whether troff is groff, otherwise it
	  always returns false.  Reported by Niels Thykier.
	* NEWS: Document this.

Sun Jun 23 22:50:24 BST 2013  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.4.

Sun Jun 23 22:44:19 BST 2013  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20130623.

Sun Jun 23 21:21:13 BST 2013  Peter Schiffer  <pschiffe@redhat.com>
                              Colin Watson  <cjwatson@debian.org>

	Search the full manpath when expanding manual pages that consist
	only of a .so directive (Fedora bug #693458).

	* src/ult_src.c (find_include): New function, handling manpath
	  search where necessary.
	  (ult_src): Call it when a .so directive is found.
	* src/Makefile.am (lexgrog_SOURCES): Add globbing.c and globbing.h.
	* src/tests/man-5: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add man-5.
	* NEWS: Document this.

Sun Jun 23 21:15:45 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/mandb-3: Don't rely on ".so test.1" not working.

Sun Jun 23 14:35:51 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (def_path): Expand wildcards in MANDATORY_MANPATH.

Sun Jun 23 14:29:34 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (guess_manpath): Honour MAN_TEST_DISABLE_PATH
	  environment variable, allowing the test suite to disable PATH
	  handling.  (May change without notice.)
	  (read_config_file): Honour MAN_TEST_DISABLE_SYSTEM_CONFIG